feat(tickets): implementa criacao de tickets
